[package]
name = "finance-dist"
version = "0.1.0"
authors = ["Papagex <geeksgeckosandgoodvibes@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"

[build-dependencies]
slint-build = "1.4"

[package.metadata.bundle]
name = "Income Distribution"
identifier = ""